Initial reflection is up and running. :)

--- a/demo/index.html
+++ b/demo/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+  <div id="testElement">
+    {{message}}
+  </div>
   <script src="js/bind.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
