We have some basic binding working now. :)

--- a/demo/index.html
+++ b/demo/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div id="testElement">
-    {{message}} - {{hotdog}}
+    <span>{{this.message}} - {{this.message}}</span>
   </div>
   <script src="js/bind.js"></script>
   <script src="js/app.js"></script>
