Update metho now dynamically updates values for us. :)

--- a/demo/index.html
+++ b/demo/index.html
@@ -10,8 +10,10 @@
 
 <body>
   <div id="testElement">
-    <span>{{this.message}} - {{this.message}}</span>
+    <span>Cool Number: {{this.num * 10}}</span>
   </div>
+
+  <button id="button">Click Me</button>
   <script src="js/bind.js"></script>
   <script src="js/app.js"></script>
 </body>
